tests/base/invalid/Return_CompileFail_9.whiley
import * from whiley.lang.*

void f(int x):
    return x
